fixed top menu so that the mobile menu is no longer squashed and the buttons float left only on large monitors

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -65,7 +65,10 @@ body {
 		clear: both;
 		list-style-type: none;
 		line-height: 30px;
-    float: right;
+    float: none;
+    @media #{$small} {
+      float: right;
+    }
     @media #{$x-large} {
       float: none;
     }
